style.css
body {
    background-color: rgb(48, 46, 46);
    display: flex;
    justify-content: center;
    align-items: center;
}

.container {
    flex-grow: 0;
    flex-shrink: 1;
    width: 400px;
    min-width: 302px;
    height: 600px;
    background-color: grey;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.display {
    box-sizing: border-box;
    height: 25%;
    width: 90%;
    max-width: 90%;
    background-image: linear-gradient(45deg,
            rgba(70, 71, 71, 0.25),
            rgba(144, 228, 234, 0.39));
    border-style: inset;
    border-radius: 4px;
    border-color: rgb(158, 166, 173);
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: center;
    align-content: center;
    gap: 0px 5px;
    /*what do i want?
ha elfer az egesz egy sorban, akkor legyen közepen.
ha uj szamot kell uj sorba tenni, akkor bövüljön ennek megfelelöen
ohhh azt is lehet hogy scrollolhato boxxa valik ha overflow van hmmm
vaaagy egyenlösegjel nyomasanal az egyenlet menjen föl, legyen kisebb, es az eredmeny displayeljen külön, normal meretben hmmmmmm

az egyenlösegjelet külön spanba rakhatnam h lehessen gap a utana
*/
    color: rgb(57, 52, 52);
    font-family: 'Arial Narrow', Arial, sans-serif;
    font-size: 2.5em;
    font-weight: bold;
    overflow: auto;
    /*word-break: break-all;
    overflow-wrap: anywhere;
    text-align: end;*/
}

.pad {
    height: 70%;
    width: 90%;
    display: flex;
    flex-direction: column;
    gap: 3px;
}

.upper,
.bottom {
    display: flex;
}

.upper {
    flex: 3;
    gap: 3px;
}

.bottom {
    flex: 1;
    gap: 3px;
}

.numbers,
.symbols {
    display: flex;
    flex-wrap: wrap;
    gap: 3px;
}

.symbols {
    flex: 1;
    flex-direction: column;
    align-items: stretch;

}

.numbers {
    flex: 3;
}

.button {
    flex: 1 0 auto;
    min-width: 65px;
    ;
    font-size: 30px;
    font-weight: bold;
    text-shadow: 2px 0px 0px rgb(143, 139, 139);
    color: rgb(101, 86, 86);
    font-family: monospace;
    background-color: rgba(205, 184, 184, 0.832);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    border-color: rgb(225, 203, 203);
    cursor: pointer;
}

.button:hover {
    background-color: rgba(205, 184, 184, 0.708);
}

/*.button:active {
  box-shadow:
    inset -2px -2px 3px rgb(255 255 255 / 0.6),
    inset 2px 2px 3px rgb(0 0 0 / 0.6);
}*/
/*border-style: inset;*/


.bottom .button {
    flex: 1;
}

/*#theResult {
    font-size: 46px;
    font-weight: bold;
    text-decoration: double;
}*/

